--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "WebSockets chat",
   "main": "js/svr/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lcrespom/ws-chat.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -19,5 +23,9 @@
     "@types/node": "^6.0.46",
     "tslint": "^3.15.1",
     "typescript": "^2.0.6"
+  },
+  "dependencies": {
+    "express": "^4.14.0",
+    "ws": "^1.1.1"
   }
 }
