--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "tsc && mv js/clt/wsclt.* web",
     "start": "node js/svr/index"
   },
   "keywords": [
